# chirp-ui

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SECURITY.md  STEWARD_AUDIT.md  STEWARD_QUESTIONS.md  biome.json  package-lock.json  package.json  pyproject.toml  railway.json  vitest.config.js
.claude/: AGENTS.md  agents.md
.claude/agents/: accessibility-auditor.md  agent-grounding-auditor.md  lead-designer.md  release-captain.md
.cursor/plans/: chirp-ui-code-pre-design-tokens.plan.md  chirp-ui-ui-typography-scale.plan.md  chirp-ui_carousel_components.plan.md
.dori/: context.json  file_history.json
.dori/events/: 86ebb490.json
.dori/local/: memory.jsonl
.github/: AGENTS.md
.github/workflows/: browser-smoke.yml  changelog.yml  pages.yml  print-pdf-proof.yml  python-publish.yml  tests.yml  ty.yml
changelog.d/: +accent-on-accent-contrast.fixed.md  +action-bar-semantic-icons.changed.md  +agent-grounding-depth.added.md  +agent-source-inventory.added.md  +agent-source-map.added.md  +agent-steward-swarm.changed.md  +agents-steward-system.added.md  +ai-chat-phase-1.added.md  +ai-chat-phase-2.added.md  +ai-chat-phase-3.added.md  +app-layout-latest-chirp-runtime.fixed.md  +app-theme-starter.added.md  +appearance-tone-pilot.added.md  +application-chrome-epic.added.md  +application-chrome-system.added.md  +ascii-maturity.added.md  +base-layer-containment.added.md  +behavior-layer-hardening.added.md  +bengal-0-5-1.changed.md  +bengal-print-pdf.fixed.md  +bengal-theme-anatomy-docs.added.md  +blocks-gallery-preview-normalize.fixed.md  +browser-gauntlet.added.md  +business-object-navigation.added.md  +button-htmx-select-unset.fixed.md  +cloud-console-navigation.added.md  +collaboration-inbox-navigation.added.md  +color-system-hardening.fixed.md  +combobox-discoverability-audit.changed.md  +composer-htmx-send.fixed.md  +composer-showcase-lifecycle.fixed.md  +composite-contracts-introspection.added.md  +composite-slot-forwarding.added.md  +content-pressure-wrapping.fixed.md  +content-type-list-shell.changed.md  +content-type-sort-and-authors.fixed.md  +contextual-detail-hints.added.md  +contrast-text-color-formats.fixed.md  +control-rhythm-contract.fixed.md  +css-modularization-manifest.added.md  (+101 more)
changelog.d/added/: alpine-core-detection.md  alpine-runtime-self-check.md  bengal-theme.added.md  browser-a11y-gate.md  combobox-multi-select.md  combobox.md  command-palette-arrow-nav.md  context-aware-theming.added.md  context-menu.md  data-grid-server-state.md  date-picker.md  descriptor-coverage.added.md  layout-relationship-contracts.md  learning-tracks.md  mobile-nav-drawer.md  new-composites.added.md  onsite-component-index.md  route-context-rail.md  search-scope-chips-and-resilience.md  sharp-edges-audit.added.md  sharp-edges-phase2.added.md  sharp-edges-phase3.added.md  sharp-edges-phase4.added.md  shell-actions-id-suffix.md  steward-network.md  svg-pattern-tiles.added.md  theme-dogfood-and-reference.md  theme-notebook-taxonomy-and-docs-icons.md  topbar-leading-slot.md  yield-migration.added.md
changelog.d/changed/: chirp-theme-bespoke-spine.md  content-media-taste-floor.md  data-loading-taste-floor.md  data-table-experimental.md  direct-shell-view-transitions.md  docs-nav-folder-disclosure.md  header-setup-taste-floor.md  kida-0.9.0.md  maturity-honesty-composes-rule.md  navigation-disclosure-taste-floor.md  reference-proof-guidance.md  shell-active-sync-canonical.md  showcase-live-railway.md  site-resource-metadata-taste-floor.md  small-control-taste-floor.md  special-form-control-taste-floor.md  theme-visual-polish.md  (+4 more)
docs/: AGENT-CURATED-SNIPPETS.md  AGENT-SOURCE-INVENTORY.md  AGENT-SOURCE-MAP.md  AGENTS.md  ALPINE-MAGICS.md  ANTI-FOOTGUNS.md  APP-THEME.md  BENGAL-THEME-ANATOMY.md  CHIRP-THEME-PARITY-MATRIX.md  CHIRP-THEME.md  COMPONENT-OPTIONS.md  COMPOSITION.md  CSS-OVERRIDE-SURFACE.md  DASHBOARD-MATURITY-CONTRACT.md  DEEP-DIVE-masked-field-use-cases.md  DENSE-NAVIGATION-RECIPES.md  DENSE-NAVIGATION-SYNTHESIS.md  DESIGN-SYSTEM-RESEARCH.md  DESIGN-css-registry-projection.md  DESIGN-interactive-anatomy.md  DESIGN-layout-affinity.md  DESIGN-llm-endpoints.md  DESIGN-manifest-signature-extraction.md  DND-FRAGMENT-ISLAND.md  DOCS-IA-MIGRATION.md  DRAWER-TRAY-ANATOMY.md  DROPDOWN-ANATOMY.md  FORUM-SITE-PATTERNS.md  HTMX-ADVANCEMENT.md  HTMX-PATTERNS.md  INDEX.md  LAYOUT-AFFINITY-RESOLVER-AUTHORING.md  LAYOUT-GRIDS-AND-FRAMES.md  LAYOUT-OVERFLOW.md  LAYOUT-PRESETS.md  LAYOUT-VERTICAL.md  LAYOUT.md  MEDIA-SITE-PATTERNS.md  MODAL-ANATOMY.md  NAVIGATION.md  (+37 more)
examples/: AGENTS.md
scripts/: AGENTS.md  assemble-static-showcase.sh  build_blocks_gallery.py  build_chirpui_css.py  build_component_index.py  build_component_options.py  build_manifest.py  build_print_pdf_proof.py  docs_site.py  escape_audit.py  extract_tokens.py  fix_unified_end_tags.py  showcase_deploy_smoke.sh  template_check.py  verify_print_pdf_proof.py
site/: AGENTS.md
tests/: AGENTS.md  conftest.py  helpers.py  layout_affinity_contract.py  test_agent_source_strategy_docs.py  test_alpine.py  test_annotation_grammar.py  test_app_check.py  test_app_shell_contract.py  test_application_chrome_css.py  test_application_chrome_plan.py  test_ascii_components.py  test_ascii_interactive_contract.py  test_ascii_maturity_ratchets.py  test_ascii_promotion_readiness.py  test_bengal_library_contract_plan.py  test_bengal_theme_anatomy_evidence.py  test_bengal_theme_package.py  test_blocks_gallery.py  test_chirp_integration.py  test_chirpui_css_concat.py  test_cli_entry_point.py  test_component_options_ratchets.py  test_component_showcase_legacy_helpers.py  test_component_showcase_packaging.py  test_components.py  test_composite_contracts.py  test_config_schema.py  test_coverage_sprint1.py  test_css_scope_ratchets.py  test_css_subset.py  test_css_syntax.py  test_data_integration.py  test_dense_object_chrome_recipes.py  test_density_scale.py  test_description_coverage.py  test_docs_ia_ratchets.py  test_docs_site.py  test_drawer_tray_anatomy_evidence.py  test_dropdown_anatomy_evidence.py  (+67 more)
(+1486 files in other folders)
