[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chirp-ui"
version = "0.5.0"
description = "A love letter to CSS and HTML over the wire — gorgeous Chirp components, htmx-native, Alpine.js for interactivity"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Bengal Contributors", email = "lbeezr@icloud.com" }]
keywords = [
    "components",
    "ui",
    "htmx",
    "kida",
    "chirp",
    "templates",
    "web",
    "html",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed",
]
dependencies = [
    "kida-templates>=0.7.0", # Template engine (strict_undefined=True default, nested def rejection, RenderCapture)
]

[project.optional-dependencies]
showcase = ["bengal-chirp>=0.2.0"] # For examples/component-showcase

[project.entry-points."bengal.themes"]
chirp-theme = "bengal_themes.chirp_theme"

[project.urls]
Homepage = "https://github.com/lbliii/chirp-ui"
Repository = "https://github.com/lbliii/chirp-ui"

# =============================================================================
# uv — Workspace development
# =============================================================================
# For local development with kida in a workspace, add to workspace root:
#   [tool.uv.workspace]
#   members = ["chirp-ui", "path/to/kida"]
# Standalone installs and CI use kida-templates from PyPI.

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chirp_ui = [
    "py.typed",
    "manifest.json",
    "templates/**/*.html",
    "templates/**/*.css",
    "templates/**/*.js",
    "templates/**/*.svg",
]
"bengal_themes.chirp_theme" = [
    "theme.toml",
    "templates/**/*.html",
    "assets/**/*",
]

# =============================================================================
# Ruff — Linter & Formatter
# =============================================================================
# Matches bengal/kida/chirp rule set

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, variables, etc.)
    "UP",   # pyupgrade — Python modernization
    "B",    # flake8-bugbear — common bugs and design problems
    "SIM",  # flake8-simplify — simplify code
    "I",    # isort — import sorting
    "N",    # pep8-naming — naming conventions
    "PIE",  # misc lints (unnecessary pass, duplicate dict keys, etc.)
    "PERF", # perflint — performance anti-patterns
    "C4",   # unnecessary comprehensions/list()/dict() calls
    "RUF",  # Ruff-specific (unused noqa, mutable class defaults, etc.)
    "PT",   # flake8-pytest-style — pytest best practices
]
ignore = [
    "E501", # line too long — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]   # Allow unused imports in __init__ files (re-exports)
"tests/**/*.py" = ["S101"]   # Allow assert in tests
"tests/browser/**/*.py" = ["S101", "PT004", "PT005"]  # Browser tests use async fixtures

# =============================================================================
# ty — Type Checker (Rust-based, Astral)
# =============================================================================

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
exclude = ["dist/", "build/", "tests/"]

[tool.ty.rules]
unused-ignore-comment = "warn"

# =============================================================================
# Pytest
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-ra", "-q", "--strict-markers", "--import-mode=importlib", "--ignore=tests/browser"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests requiring full app setup",
]

# =============================================================================
# Coverage
# =============================================================================

[tool.coverage.run]
source = ["src/chirp_ui", "src/bengal_themes"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 1
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
    "def __repr__",
]

# =============================================================================
# Development Dependencies (PEP 735 — install with: uv sync --group dev)
# =============================================================================

[dependency-groups]
docs = [
    "bengal>=0.3.0",
    "lunr>=0.7.0",
]
dev = [
    # Bengal-backed theme packaging/build tests run in the normal test suite
    "bengal>=0.3.0",
    # Task runner (poe tasks in [tool.poe.tasks])
    "poethepoet>=0.32.0",
    # Testing
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.0",
    "tinycss2>=1.4.0",
    # Type Checking
    "ty>=0.0.11",
    # Linting & Formatting
    "ruff>=0.15.1", # 0.15.1+ fixes except-parenthesis bug (PEP 758 + as clause)
    # Pre-commit
    "pre-commit>=4.0.0",
    # Changelog
    "towncrier>=24.8.0",
]
browser = [
    # Browser integration tests (Playwright + real Chirp app)
    "bengal-chirp>=0.2.0",
    "playwright>=1.50.0",
    "pytest-asyncio>=0.25.0",
    "bengal-pounce>=0.2.1",
]

# =============================================================================
# Task Runner (poethepoet) — use: poe <task>
# =============================================================================

[tool.poe.tasks]
# Testing
test = { cmd = "pytest", help = "Run full test suite" }
test-fast = { cmd = "pytest tests/ -x -q --timeout=10", help = "Fast feedback loop" }
test-cov = { cmd = "pytest tests/ --cov=chirp_ui --cov=bengal_themes --cov-report=term-missing", help = "Run tests with coverage" }
test-browser = { cmd = "pytest tests/browser/ -q --timeout=30 --override-ini='addopts='", help = "Run browser integration tests (requires: uv sync --group browser && playwright install chromium)" }
ci-browser = { sequence = ["test-browser"], help = "Browser integration tests (release gate)" }

# Type Checking
ty = { cmd = "ty check src/chirp_ui/", help = "Run ty type checker" }
ty-strict = { cmd = "ty check src/chirp_ui/ --error-on-warning", help = "Strict type checking" }

# Linting & Formatting
lint = { cmd = "ruff check .", help = "Run ruff linter" }
lint-fix = { cmd = "ruff check . --fix", help = "Run ruff linter with auto-fix" }
format = { cmd = "ruff format .", help = "Format code with ruff" }
format-check = { cmd = "ruff format . --check", help = "Check formatting" }
build-css = { cmd = "python scripts/build_chirpui_css.py", help = "Concat CSS partials into chirpui.css" }
build-css-check = { cmd = "python scripts/build_chirpui_css.py --check", help = "Fail if chirpui.css is stale relative to partials" }
build-manifest = { cmd = "python scripts/build_manifest.py", help = "Emit src/chirp_ui/manifest.json from the registry" }
build-manifest-check = { cmd = "python scripts/build_manifest.py --check", help = "Fail if manifest.json is stale relative to the registry" }
build-docs = { cmd = "python scripts/build_component_options.py", help = "Regenerate docs/COMPONENT-OPTIONS.md API reference section from the manifest" }
build-docs-check = { cmd = "python scripts/build_component_options.py --check", help = "Fail if docs/COMPONENT-OPTIONS.md is stale relative to the manifest" }
css-check = { cmd = "pytest tests/test_css_syntax.py -q", help = "Validate CSS parses cleanly" }
css-contract-check = { cmd = "pytest tests/test_template_css_contract.py -q", help = "Check template classes exist in CSS" }
css-transition-check = { cmd = "pytest tests/test_transition_tokens.py -q", help = "Check transitions use motion tokens" }
css-concat-check = { cmd = "pytest tests/test_chirpui_css_concat.py -q", help = "Check chirpui.css matches partials" }

# Documentation
docs-serve = { cmd = "python scripts/docs_site.py serve", help = "Serve docs site locally" }
docs-build = { cmd = "python scripts/docs_site.py build", help = "Build docs site" }
docs-assemble-showcase = { cmd = "bash scripts/assemble-static-showcase.sh site/public/showcase", help = "Copy static showcase into site/public/showcase (after docs-build)" }
docs-emit-manifest.shell = "mkdir -p site/public && python -m chirp_ui.manifest --json > site/public/chirpui.manifest.json"
docs-emit-manifest.help = "Emit chirpui component manifest to site/public/chirpui.manifest.json"
docs-build-all = { sequence = ["docs-build", "docs-assemble-showcase", "docs-emit-manifest"], help = "Build Bengal site, assemble static showcase, and emit manifest" }

# CI Pipeline
ci = { sequence = [
    "lint",
    "format-check",
    "build-css-check",
    "build-manifest-check",
    "build-docs-check",
    "css-check",
    "css-contract-check",
    "css-transition-check",
    "css-concat-check",
    "ty",
    "test",
], help = "Full CI check" }
check = { sequence = [
    "lint",
    "format-check",
    "build-css-check",
    "build-manifest-check",
    "build-docs-check",
    "css-check",
    "css-contract-check",
    "css-transition-check",
    "ty",
], help = "Quick check (no tests)" }

# Changelog
changelog = { cmd = "towncrier build --yes", help = "Build changelog from fragments" }
changelog-draft = { cmd = "towncrier build --draft", help = "Preview changelog without writing" }

# Cleanup
clean.shell = """
rm -rf dist build .pytest_cache .coverage htmlcov .ruff_cache .ty_cache
find . -type d -name '__pycache__' -exec rm -rf {} + 2>/dev/null || true
"""
clean.help = "Remove build artifacts and caches"

# =============================================================================
# Towncrier — Fragment-based changelog
# =============================================================================

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
package = "chirp_ui"
package_dir = "src"
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/lbliii/chirp-ui/issues/{issue})"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true
